<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/background_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/group_override_button"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <Button
                android:id="@+id/setting_one_minute"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/one_minute"
                android:tooltipText="@string/tooltip_setting_one_minute" />

            <Button
                android:id="@+id/setting_five_minutes"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/five_minute"
                android:tooltipText="@string/tooltip_setting_five_minutes" />

            <Button
                android:id="@+id/setting_manual"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/manual"
                android:tooltipText="@string/tooltip_setting_manual" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <ToggleButton
            android:id="@+id/group_override_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:checked="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textOff="@string/separate_groups"
            android:textOn="@string/app_as_one_group"
            android:tooltipText="@string/tooltip_app_as_one_group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:translationY="48dp">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            app:layout_constraintBottom_toBottomOf="@id/appIcon"
            app:layout_constraintStart_toEndOf="@id/appIcon"
            app:layout_constraintTop_toTopOf="@id/appIcon"
            tools:text="App name" />

        <Switch
            android:id="@+id/appEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="true"
            android:textOff="@string/switchOff"
            android:textOn="@string/switchOn"
            app:layout_constraintBottom_toBottomOf="@id/appIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/appIcon" />

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>